@@ -1949,7 +1949,7 @@ char *display_string(const char *buf, size_t start_col, size_t len, bool
 
 	/* If buf contains a tab character, interpret it. */
 	if (*buf_mb == '\t') {
-#if !defined(NANO_TINY) && !defined(DISABLE_NANORC)
+#ifndef NANO_TINY
 	    if (ISSET(WHITESPACE_DISPLAY)) {
 		int i;
 
@@ -1982,7 +1982,7 @@ char *display_string(const char *buf, size_t start_col, size_t len, bool
 	    free(ctrl_buf_mb);
 	/* If buf contains a space character, interpret it. */
 	} else if (*buf_mb == ' ') {
-#if !defined(NANO_TINY) && !defined(DISABLE_NANORC)
+#ifndef NANO_TINY
 	    if (ISSET(WHITESPACE_DISPLAY)) {
 		int i;
 
@@ -2240,8 +2240,10 @@ void statusbar(const char *msg, ...)
     va_list ap;
     char *bar, *foo;
     size_t start_x;
-#if !defined(NANO_TINY) && !defined(DISABLE_NANORC)
-    bool old_whitespace;
+#ifndef NANO_TINY
+    bool old_whitespace = ISSET(WHITESPACE_DISPLAY);
+
+    UNSET(WHITESPACE_DISPLAY);
 #endif
 
     va_start(ap, msg);
@@ -2256,16 +2258,13 @@ void statusbar(const char *msg, ...)
 
     blank_statusbar();
 
-#if !defined(NANO_TINY) && !defined(DISABLE_NANORC)
-    old_whitespace = ISSET(WHITESPACE_DISPLAY);
-    UNSET(WHITESPACE_DISPLAY);
-#endif
     bar = charalloc(mb_cur_max() * (COLS - 3));
     vsnprintf(bar, mb_cur_max() * (COLS - 3), msg, ap);
     va_end(ap);
     foo = display_string(bar, 0, COLS - 4, FALSE);
     free(bar);
-#if !defined(NANO_TINY) && !defined(DISABLE_NANORC)
+
+#ifndef NANO_TINY
     if (old_whitespace)
 	SET(WHITESPACE_DISPLAY);
 #endif
